# grpc-client-cpp

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.build  LICENSE  README.md
.github/workflows/: build.yml
debian/: changelog  control  copyright  grpc-client.install  grpc-server.dirs  grpc-server.install  grpc-server.service  rules
doc/: balancing.md
envoy/api/v2/: cds.proto  cluster.proto  discovery.proto  eds.proto  endpoint.proto  lds.proto  listener.proto  rds.proto
envoy/api/v2/auth/: common.proto  secret.proto  tls.proto
envoy/api/v2/cluster/: circuit_breaker.proto  filter.proto  outlier_detection.proto
envoy/api/v2/core/: address.proto  backoff.proto  base.proto  config_source.proto  event_service_config.proto  grpc_service.proto  health_check.proto  http_uri.proto  protocol.proto  socket_option.proto
envoy/api/v2/endpoint/: endpoint_components.proto
envoy/api/v2/listener/: listener_components.proto  udp_listener_config.proto
envoy/api/v2/route/: route_components.proto
envoy/config/listener/v2/: api_listener.proto
envoy/service/cluster/v3/: cds.proto
envoy/service/discovery/v2/: ads.proto  hds.proto  rtds.proto  sds.proto
envoy/service/endpoint/v3/: eds.proto
envoy/type/: percent.proto  range.proto
envoy/type/matcher/: regex.proto  string.proto
envoy/type/metadata/v2/: metadata.proto
hooks/: build  push
kubernetes/: grpc-server-deployment-90ms.yaml  grpc-server-deployment.yaml  grpc-server-service-90ms.yaml  grpc-server-service.yaml
proto/: server.proto
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cc
src/server/: CMakeLists.txt  main.cc
(+2 files in other folders)
